# BDOGuildChatReader

./: get_window_position.py  main.py  pyproject.toml
ChatReader/: README.md  check_proccess.py  check_torch.py  main.py  pyproject.toml
